# apksig

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  lints.yml  tests.yml
src/: apk.rs  common.rs  lib.rs  main.rs  scheme_v2.rs  scheme_v3.rs  utils.rs  zip.rs
src/signing_block/: algorithms.rs  digest.rs  mod.rs  scheme_v2.rs  scheme_v3.rs
tests/: de.kaffeemitkoffein.imagepipe_51.apk  keystore_cert.der  raw_signing_block_v2.rs  signing_block.rs  signing_block_v2.rs  signing_block_v3.rs  test_certificate.rs  test_digest.rs  test_main.rs  test_sign.rs
web_demo/: Cargo.toml  index.html
web_demo/src/: main.rs
