[package]
name = "apksig"
version = "0.2.0"
edition = "2021"
description = "Decoding the APK Signing Block"
documentation = "https://docs.rs/apksig"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Its-Just-Nans/apksig"
keywords = ["apk", "android", "signing", "signature", "apksig"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
x509-parser = { version = "0.17.0", optional = true }
md5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
default = ["directprint", "serde", "certificate", "hash"]

serde = ["dep:serde"]

certificate = ["dep:x509-parser"]

directprint = []

hash = ["dep:md5", "dep:sha1", "dep:sha2"]

traceback = []