[package]
name = "apksig"
version = "0.2.1"
edition = "2021"
description = "Decoding the APK Signing Block"
documentation = "https://docs.rs/apksig"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Its-Just-Nans/apksig"
keywords = ["apk", "android", "signing", "signature", "apksig"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
x509-parser = { version = "0.17.0", optional = true }
md5 = { version = "0.7.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
# by default, very opinionated features are enabled
# used mostly for main.rs
default = ["directprint", "serde", "certificate", "hash"]

# allows to serialize and deserialize structs with serde
serde = ["dep:serde"]

# allows to parse certificates
# provides the function get_issuer() for the Certificate struct
certificate = ["dep:x509-parser"]

# print the APK Signing Block while parsing
directprint = []

# allows to calculate the hash of Certificate
# provides the functions sha1_cert(), sha256_cert(), md5_cert() for the Certificate struct
hash = ["dep:md5", "dep:sha1", "dep:sha2"]

# print the stack trace when an error occurs in the MyReader struct
traceback = []
