[package]
name = "apksig"
version = "0.4.0"
edition = "2024"
description = "Decoding the APK Signing Block"
documentation = "https://docs.rs/apksig"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Its-Just-Nans/apksig"
keywords = ["apk", "android", "signing", "signature", "apksig"]
categories = ["api-bindings", "command-line-utilities"]
exclude = ["tests/", "web_demo/"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
rsa = { version = "0.9.9", features = ["sha2"], optional = true }
md-5 = { version = "0.10.6", optional = true }

[dev-dependencies]
# test serialization (note that serialization is used in web_demo)
serde_json = "1.0.145"

# test main.rs
assert_cmd = "2.1.1"
predicates = "3.1.3"

# private key generation for testing
rand = "0.8.5"

# test issuer
x509-parser = { version = "0.17.0" }

[features]
# by default, very opinionated features are enabled
# used mostly for main.rs
default = ["directprint", "serde", "hash", "signing"]

# verify the APK Signing Block
signing = ["hash", "dep:rsa"]

# allows to serialize and deserialize structs with serde
serde = ["dep:serde"]

# print the APK Signing Block while parsing
directprint = []

# allows to calculate the hash of Certificate
# provides the functions sha1_cert(), sha256_cert(), md5_cert() for the Certificate struct
hash = ["dep:md-5", "dep:sha1", "dep:sha2"]
