[package]
name = "apksig_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
] }
apksig = { path = "../", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
md-5 = "0.10.6"
